Archive2/8c/6ff5108a0a8f05/output
main.c:1:1: error: 'main' must return 'int'
void main()
^~~~
int
1 error generated.
main.c:1:6: error: return type of 'main' is not 'int' [-Wmain]
 void main()
      ^
